# grpc_web_app

./: Cargo.toml  buf.yaml  build.rs  configuration.yaml  fmt-proto.sh
migrations/: 20220630094733_create_news_table.sql
proto/kb/v1/: news.proto
scripts/: db.sh
src/: lib.rs  main.rs
tests/: news.rs
